fix：修复账号列表列表列标题展示缺失

--- a/index.html
+++ b/index.html
@@ -196,8 +196,11 @@
                                         <tr>
                                             <th>ID</th>
                                             <th>邮箱</th>
+                                            <th>密码</th>
+                                            <th>TOKEN</th>
+                                            <th>高级使用</th>
                                             <th>创建时间</th>
-                                            <th>状态</th>
+                                            <th>余量</th>
                                             <th>操作</th>
                                         </tr>
                                     </thead>
