--- a/index.html
+++ b/index.html
@@ -332,6 +332,56 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- 在系统配置表单中添加代理设置部分 -->
+                                <div class="config-section card mb-3">
+                                    <div class="card-header bg-light">
+                                        <h5 class="mb-0">代理服务器设置</h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="form-check form-switch mb-3">
+                                            <input class="form-check-input" type="checkbox" role="switch" id="use-proxy" disabled name="USE_PROXY">
+                                            <label class="form-check-label" for="use-proxy">启用代理服务器</label>
+                                        </div>
+                                        
+                                        <div id="proxy-settings" class="mb-3">
+                                            <div class="row mb-3">
+                                                <div class="col-md-6">
+                                                    <label for="proxy-type" class="form-label">代理类型</label>
+                                                    <select class="form-select" id="proxy-type" disabled name="PROXY_TYPE">
+                                                        <option value="http">HTTP</option>
+                                                        <option value="https">HTTPS</option>
+                                                        <option value="socks4">SOCKS4</option>
+                                                        <option value="socks5">SOCKS5</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <label for="proxy-host" class="form-label">代理服务器地址</label>
+                                                    <input type="text" class="form-control" id="proxy-host" disabled name="PROXY_HOST" placeholder="例如: 127.0.0.1">
+                                                </div>
+                                            </div>
+                                            <div class="row mb-3">
+                                                <div class="col-md-6">
+                                                    <label for="proxy-port" class="form-label">代理服务器端口</label>
+                                                    <input type="number" class="form-control" id="proxy-port" disabled name="PROXY_PORT" placeholder="例如: 7890">
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <label for="proxy-timeout" class="form-label">超时时间 (秒)</label>
+                                                    <input type="number" class="form-control" id="proxy-timeout" disabled name="PROXY_TIMEOUT" value="10">
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <label for="proxy-username" class="form-label">用户名 (可选)</label>
+                                                    <input type="text" class="form-control" id="proxy-username" disabled name="PROXY_USERNAME" placeholder="认证用户名">
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <label for="proxy-password" class="form-label">密码 (可选)</label>
+                                                    <input type="password" class="form-control" id="proxy-password" disabled name="PROXY_PASSWORD" placeholder="认证密码">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- 将按钮容器从text-end改为新的栅格布局 -->
                                 <div class="row mt-4 config-actions" id="config-actions" style="display:none">
                                     <div class="col-6 pe-1">
@@ -350,6 +400,13 @@
                                         <span class="visually-hidden">编辑提示</span>
                                     </span>
                                 </button>
+                            </div>
+                            <!-- 在系统配置区域底部添加重启按钮 -->
+                            <div class="text-center mt-4">
+                                <button id="restart-service-btn" class="btn btn-danger">
+                                    <i class="fas fa-sync-alt me-2"></i>重启服务
+                                </button>
+                                <p class="text-muted small mt-2">某些配置更改需要重启服务才能生效</p>
                             </div>
                         </div>
                     </div>
