--- a/index.html
+++ b/index.html
@@ -382,6 +382,28 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- 在系统配置区域添加重置机器ID按钮 -->
+                                <div class="config-section card mb-3">
+                                    <div class="card-header bg-light">
+                                        <h5 class="mb-0">系统维护</h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <button id="restart-service-btn" class="btn btn-primary w-100">
+                                                    <i class="fas fa-sync-alt me-2"></i>重启服务
+                                                </button>
+                                                <p class="text-muted small mt-1">某些配置更改需要重启服务才能生效</p>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <button id="reset-machine-btn" class="btn btn-danger w-100">
+                                                    <i class="fas fa-microchip me-2"></i>重置机器ID
+                                                </button>
+                                                <p class="text-muted small mt-1">解决设备绑定或配额限制问题</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- 将按钮容器从text-end改为新的栅格布局 -->
                                 <div class="row mt-4 config-actions" id="config-actions" style="display:none">
                                     <div class="col-6 pe-1">
@@ -400,13 +422,6 @@
                                         <span class="visually-hidden">编辑提示</span>
                                     </span>
                                 </button>
-                            </div>
-                            <!-- 在系统配置区域底部添加重启按钮 -->
-                            <div class="text-center mt-4">
-                                <button id="restart-service-btn" class="btn btn-danger">
-                                    <i class="fas fa-sync-alt me-2"></i>重启服务
-                                </button>
-                                <p class="text-muted small mt-2">某些配置更改需要重启服务才能生效</p>
                             </div>
                         </div>
                     </div>
