--- a/index.html
+++ b/index.html
@@ -184,14 +184,53 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="input-group">
-                        <input type="text" id="search-input" class="form-control" placeholder="搜索账号...">
-                        <button class="btn btn-outline-secondary" type="button" id="search-btn">
-                            <i class="fas fa-search"></i>
-                        </button>
-                        <button class="btn btn-outline-secondary" type="button" id="clear-search-btn">
-                            <i class="fas fa-times"></i>
-                        </button>
+                    <div class="d-flex justify-content-end">
+                        <div class="btn-group me-2">
+                            <button class="btn btn-sm btn-outline-primary" style="width: 100px;" id="export-accounts-btn">
+                                <i class="fas fa-file-export me-1"></i>导出账号
+                            </button>
+                            <button class="btn btn-sm btn-outline-success" style="width: 100px;" id="import-accounts-btn">
+                                <i class="fas fa-file-import me-1"></i>导入账号
+                            </button>
+                        </div>
+                        <div class="input-group">
+                            <input type="text" id="search-input" class="form-control form-control-sm" placeholder="搜索账号...">
+                            <button class="btn btn-sm btn-outline-secondary" type="button" id="search-btn">
+                                <i class="fas fa-search"></i>
+                            </button>
+                            <button class="btn btn-sm btn-outline-secondary" type="button" id="clear-search-btn">
+                                <i class="fas fa-times"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 添加隐藏的文件输入 -->
+            <input type="file" id="import-file-input" accept=".json" style="display: none;">
+
+            <!-- 添加导入确认对话框 -->
+            <div class="modal fade" id="import-confirm-modal" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">确认导入账号</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>即将导入 <span id="import-count">0</span> 个账号。</p>
+                            <p>注意：同名账号将被更新覆盖。确定要继续吗？</p>
+                            <div class="form-check mt-3">
+                                <input class="form-check-input" type="checkbox" id="import-overwrite-check" checked>
+                                <label class="form-check-label" for="import-overwrite-check">
+                                    允许覆盖现有账号
+                                </label>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                            <button type="button" class="btn btn-primary" id="confirm-import-btn">确认导入</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -382,28 +421,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- 在系统配置区域添加重置机器ID按钮 -->
-                                <div class="config-section card mb-3">
-                                    <div class="card-header bg-light">
-                                        <h5 class="mb-0">系统维护</h5>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <button id="restart-service-btn" class="btn btn-primary w-100">
-                                                    <i class="fas fa-sync-alt me-2"></i>重启服务
-                                                </button>
-                                                <p class="text-muted small mt-1">某些配置更改需要重启服务才能生效</p>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <button id="reset-machine-btn" class="btn btn-danger w-100">
-                                                    <i class="fas fa-microchip me-2"></i>重置机器ID
-                                                </button>
-                                                <p class="text-muted small mt-1">解决设备绑定或配额限制问题</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                                 <!-- 将按钮容器从text-end改为新的栅格布局 -->
                                 <div class="row mt-4 config-actions" id="config-actions" style="display:none">
                                     <div class="col-6 pe-1">
@@ -422,6 +439,28 @@
                                         <span class="visually-hidden">编辑提示</span>
                                     </span>
                                 </button>
+                            </div>
+                        </div>
+                        <!-- 在系统配置区域添加重置机器ID按钮 -->
+                        <div class="config-section card mb-3">
+                            <div class="card-header bg-light">
+                                <h5 class="mb-0">系统维护</h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <button id="restart-service-btn" class="btn btn-primary w-100">
+                                            <i class="fas fa-sync-alt me-2"></i>重启服务
+                                        </button>
+                                        <p class="text-muted small mt-1">某些配置更改需要重启服务才能生效</p>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <button id="reset-machine-btn" class="btn btn-danger w-100">
+                                            <i class="fas fa-microchip me-2"></i>重置机器ID
+                                        </button>
+                                        <p class="text-muted small mt-1">解决设备绑定或配额限制问题</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
