update：重置机器ID 慎用提醒

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         <button id="reset-machine-btn" class="btn btn-danger w-100">
-                                            <i class="fas fa-microchip me-2"></i>重置机器ID
+                                            <i class="fas fa-microchip me-2"></i>重置机器ID（慎用，实测切换了一下账号直接被Cursor封了。。。）
                                         </button>
                                         <p class="text-muted small mt-1">解决设备绑定或配额限制问题</p>
                                     </div>
