update：临时邮箱用户名显示优化

--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
                                             <small class="text-muted">用于注册的邮箱域名，多个域名用逗号分隔</small>
                                         </div>
                                         <div class="mb-3">
-                                            <label for="email-username" class="form-label">临时邮箱用户名（只用用户名，示例：ddcat28，访问：https://tempmail.plus/ 获取）</label>
-                                            <input type="text" id="email-username" class="form-control" disabled>
-                                            <small class="text-muted">用于接收验证码的临时邮箱用户名</small>
+                                            <label for="email-username" class="form-label">临时邮箱用户名</label>
+                                            <input type="text" id="email-username" class="form-control" placeholder="加载中...">
+                                            <small class="text-muted">用于接收验证码的临时邮箱用户名（不需要输入@及后面的部分）</small>
                                         </div>
                                         <div class="mb-3">
                                             <label for="email-pin" class="form-label">临时邮箱PIN</label>
