--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                             <small class="text-muted">True=无界面运行浏览器，False=显示浏览器界面</small>
                                         </div>
                                         <div class="mb-3">
-                                            <label for="dynamic-useragent" class="form-label">动态User-Agent</label>
+                                            <label for="dynamic-useragent" class="form-label">动态User-Agent（先不要配置）</label>
                                             <div class="form-check form-switch">
                                                 <input class="form-check-input" type="checkbox" role="switch"
                                                     id="dynamic-useragent" disabled>
